--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
 
 <html>
    <body>
-      <h1>Hello WAMP</h1>
+      <h1>Alô WAMP</h1>
       <p>Open JavaScript console to watch output.</p>
       <script>AUTOBAHN_DEBUG = true;</script>
       <!--
